monitoring/semifinal/manifests/grafana/03-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  type: ClusterIP
  ports:
    - name: service
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: grafana
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    certmanager.k8s.io/issuer: monitoring-issuer
spec:
  ingressClassName: system-ingress
  tls:
    - hosts:
        - "grafana.kryukov.local"
      secretName: grafana-tls
  rules:
    - host: "grafana.kryukov.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: grafana
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: grafana
      app.kubernetes.io/instance: grafana
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grafana
        app.kubernetes.io/instance: grafana
    spec:
      serviceAccountName: grafana
      automountServiceAccountToken: true
      securityContext:
        fsGroup: 472
        runAsGroup: 472
        runAsUser: 472
      enableServiceLinks: true
      containers:
        - name: grafana
          image: "grafana/grafana:8.3.4"
          imagePullPolicy: IfNotPresent
          ports:
            - name: service
              containerPort: 80
              protocol: TCP
            - name: grafana
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 60
            timeoutSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
          resources:
            limits:
              cpu: 500m
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
          - name: config
            mountPath: "/etc/grafana/grafana.ini"
            subPath: grafana.ini
          - name: config
            mountPath: "/etc/grafana/provisioning/dashboards/dashboardproviders.yaml"
            subPath: "dashboardproviders.yaml"
          - name: config
            mountPath: "/etc/grafana/provisioning/datasources/datasources.yaml"
            subPath: "datasources.yaml"
          - name: storage
            mountPath: "/var/lib/grafana"
      volumes:
        - name: config
          configMap:
            name: grafana
        - name: storage
          persistentVolumeClaim:
            claimName: grafana
        - name: dashboard-daemonset
          configMap:
            name: daemonset
        - name: dashboard-deployment
          configMap:
            name: deployment
        - name: dashboard-sts
          configMap:
            name: sts
        - name: dashboard-k8s
          configMap:
            name: k8s
        - name: dashboard-main
          configMap:
            name: main
        - name: dashboard-node-exporter
          configMap:
            name: node-exporter
        - name: dashboard-nodes
          configMap:
            name: nodes
        - name: dashboard-pod
          configMap:
            name: pod
        - name: dashboard-pods
          configMap:
            name: pods
        - name: dashboard-victoria
          configMap:
            name: victoria
        - name: dashboard-ingress-nginx
          configMap:
            name: ingress-nginx
